--- a/AspNetWebApp/Views/Login/Index.cshtml
+++ b/AspNetWebApp/Views/Login/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@model dynamic
-
+﻿@model AspNetWebApp.Models.Siniflar.Admin
 @{
     Layout = null;
 }
@@ -9,7 +8,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AdminLTE 3 | Log in</title>
+  <title>AdminLTE 3 | Giriş Yap</title>
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -28,11 +27,15 @@
   <!-- /.login-logo -->
   <div class="card">
     <div class="card-body login-card-body">
-      <p class="login-box-msg">Sign in to start your session</p>
+      <p class="login-box-msg">Oturumunuzu başlatmak için giriş yapın</p>
 
-      <form action="../../index3.html" method="post">
+      <form action="~/Login/Login" method="post">
         <div class="input-group mb-3">
+          @*
           <input type="email" class="form-control" placeholder="Email">
+                    *@
+                    @Html.TextBoxFor(x => x.KullaniciAd, new { placeholder = "Kullanıcı Adı",@class = "form-control" })
+
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-envelope"></span>
@@ -40,7 +43,11 @@
           </div>
         </div>
         <div class="input-group mb-3">
+          @*
           <input type="password" class="form-control" placeholder="Password">
+                              *@
+                              @Html.TextBoxFor(x => x.Sifre, new { placeholder = "Şifre",@class = "form-control",@type = "password"  })
+
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-lock"></span>
@@ -52,34 +59,34 @@
             <div class="icheck-primary">
               <input type="checkbox" id="remember">
               <label for="remember">
-                Remember Me
+                Beni Hatırla
               </label>
             </div>
           </div>
           <!-- /.col -->
           <div class="col-4">
-            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+            <button type="submit" class="btn btn-primary btn-block">Giriş Yap</button>
           </div>
           <!-- /.col -->
         </div>
       </form>
 
       <div class="social-auth-links text-center mb-3">
-        <p>- OR -</p>
+        <p>- Veya -</p>
         <a href="#" class="btn btn-block btn-primary">
-          <i class="fab fa-facebook mr-2"></i> Sign in using Facebook
+          <i class="fab fa-facebook mr-2"></i> Facebook ile giriş yap.
         </a>
         <a href="#" class="btn btn-block btn-danger">
-          <i class="fab fa-google-plus mr-2"></i> Sign in using Google+
+          <i class="fab fa-google-plus mr-2"></i> Google+ ile giriş yap.
         </a>
       </div>
       <!-- /.social-auth-links -->
 
       <p class="mb-1">
-        <a href="forgot-password.html">I forgot my password</a>
+        <a href="forgot-password.html">Şifremi unuttum.</a>
       </p>
       <p class="mb-0">
-        <a href="register.html" class="text-center">Register a new membership</a>
+        <a href="~/Register/Index" class="text-center">Yeni üyelik oluşturun.</a>
       </p>
     </div>
     <!-- /.login-card-body -->
