--- a/AspNetWebApp/Views/Shared/_AdminLayout.cshtml
+++ b/AspNetWebApp/Views/Shared/_AdminLayout.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using System.Web.UI.WebControls
+@{
 
 }
 
@@ -195,7 +196,7 @@
                         <img src="~/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block">Volkan Yenibağcı</a>
+                        <a href="#" class="d-block">@ViewBag.m</a>
                     </div>
                 </div>
 
