Repository Pattern Arch.

--- a/AspNetWebApp/Views/Shared/_KategoriLayout.cshtml
+++ b/AspNetWebApp/Views/Shared/_KategoriLayout.cshtml
@@ -239,7 +239,7 @@
                             <a href="~/Home/Kategori" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
-                                    Kategoriler
+                                    Kategorilerr
                                     @*<span class="right badge badge-danger">New</span>*@
                                 </p>
                             </a>
