--- a/AspNetWebApp/Views/Shared/_AdminLayout.cshtml
+++ b/AspNetWebApp/Views/Shared/_AdminLayout.cshtml
@@ -246,6 +246,15 @@
                 </li>
             </ul>*@
                         </li>
+                          <li class="nav-item">
+                                                    <a href="~/Login/Logout" class="nav-link">
+                                                        <i class="nav-icon fas fa-th"></i>
+                                                        <p>
+                                                            Çıkış yap
+                                                            @*<span class="right badge badge-danger">New</span>*@
+                                                        </p>
+                                                    </a>
+                                                </li>
                         <li class="nav-item">
                             <a href="~/Home/Kategori" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
